# litellm-server-boilerplate

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CONTRIBUTORS.md  DOCKER_DEPLOYMENT.md  DOCKER_PUBLISHING.md  DOCKER_TIPS.md  Dockerfile  LICENSE  README.md  README_BOILERPLATE.md  config.yaml  deploy-docker.sh  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  kill-docker.sh  librechat.yaml  main.py  pyproject.toml  run-docker.sh  stop-docker.sh  uv-run.sh
claude_code_proxy/: claude_code_router.py  proxy_config.py  route_model.py  tracing_in_markdown.py
common/: config.py  tracing_in_markdown.py  utils.py
docs/: CONVERT_TO_BOILERPLATE.md  DOCKER_DEPLOYMENT.md  DOCKER_PUBLISHING.md  DOCKER_TIPS.md
docs/maintainers/: CONVERT_TO_BOILERPLATE.md  DOCKER_PUBLISHING.md  RELEASE.md
librechat/: .env.example  .env.non-secure-litellm-master-key  Dockerfile  README.md  deploy-compose.yml  docker-compose.override.yml  docker-compose.override.yml.example  docker-compose.yml  librechat.example.yaml  librechat.yaml  run-docker-compose.sh
migration-to-responses/: MIGRATE_TO_RESPONSES.md
proxy/: config.py  convert_stream.py  custom_llm_router.py  route_model.py  tracing_in_markdown.py  utils.py
server/: __init__.py  config.py  custom_llm_router.py  custom_provider.py  custom_yoda.py  custom_yoda_llm.py  main.py  sample_agents.py  stream_convert.py  stream_converter.py  streaming.py  streaming_converter.py  streaming_utils.py  utils.py  yoda_llm.py  yoda_model.py
tests/: test_yoda_llm.py
yoda_example/: yoda_speak.py
