[tool.black]
line-length = 119

[project]
name = "claude-code-gpt-5"
version = "0.3.4"
description = "Connect Claude Code CLI to GPT-5"
readme = "README.md"

requires-python = ">=3.8.1,<4.0, !=3.9.7"  # Copied from https://github.com/BerriAI/litellm/blob/main/pyproject.toml
dependencies = [
    "litellm[proxy] !=1.77.3,!=1.77.4",  # https://github.com/BerriAI/litellm/issues/14762
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pylint",
]
