[tool.black]
line-length = 119

[project]
# TODO Mention in the docs that the project name below needs to be changed
name = "litellm-server-boilerplate"
version = "0.1.0"
description = "TODO"
readme = "README.md"

requires-python = ">=3.8.1,<4.0, !=3.9.7"  # Copied from https://github.com/BerriAI/litellm/blob/main/pyproject.toml
dependencies = [
    "litellm[proxy] !=1.77.3,!=1.77.4",  # https://github.com/BerriAI/litellm/issues/14762
]

[project.optional-dependencies]
langfuse = [
    "langfuse>=2.0.0,<3.0.0",
]
dev = [
    "black",
    "pre-commit",
    "pylint",
]
