[tool.black]
line-length = 119

[project]
name = "my-litellm-server"
version = "1.0.0.0b4"
description = "LiteLLM server boilerplate"
readme = "README.md"

requires-python = ">=3.8.1,<4.0, !=3.9.7"  # Copied from https://github.com/BerriAI/litellm/blob/main/pyproject.toml
dependencies = [
    "litellm[proxy] !=1.77.3,!=1.77.4",  # https://github.com/BerriAI/litellm/issues/14762
]

[project.optional-dependencies]
langfuse = [
    "langfuse>=2.0.0,<3.0.0",
]
dev = [
    "black",
    "ipython",
    "pre-commit",
    "pylint<4.0.0",  # TODO Adapt to pylint 4.x.x
]
